libtbx.log
*** Error compiling 'libtbx/bundle/copy_runtime_sources.py'...
  File "libtbx/bundle/copy_runtime_sources.py", line 10
    def copy_dist_files((exclude_from_binary_bundle, dist_copy), dirname, names):
                        ^
SyntaxError: invalid syntax

*** Error compiling 'libtbx/command_line/show_env.py'...
  File "libtbx/command_line/show_env.py", line 13
    from __future__ import print_function
                                        ^
SyntaxError: from __future__ imports must occur at the beginning of the file

*** Error compiling 'libtbx/command_line/start_binary_bundle.py'...
  File "libtbx/command_line/start_binary_bundle.py", line 41
    os.chmod(install_script, 0755)
                                ^
SyntaxError: invalid token

*** Error compiling 'libtbx/easy_mp.py'...
  File "libtbx/easy_mp.py", line 258
    def __init__(O, sub_name_format="mp%03d", makedirs_mode=0777):
                                                               ^
SyntaxError: invalid token

*** Error compiling 'libtbx/scheduling/stacktrace.py'...
  File "libtbx/scheduling/stacktrace.py", line 132
    raise exception, None, self.traceback
                   ^
SyntaxError: invalid syntax

